fix : align center paragraph contact form

--- a/media.css
+++ b/media.css
@@ -239,7 +239,7 @@
     text-align: center;
     width: 80%;
   }
-  .form-contact{
+  .form-contact p{
     text-align: center;
   }
   /* footer */
